hero font overlap bug fix

--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -17,7 +17,6 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
     padding: 0;
-    line-height: 1.65rem;
 }
 
 a {
